@@ -1,3 +1,8 @@
+2005-07-05  Joseph S. Myers  <joseph@codesourcery.com>
+
+	PR c/22308
+	* gcc.dg/pr22308-1.c: New test.
+
 2005-06-13  Nathan Sidwell  <nathan@codesourcery.com>
 
 	PR c++/20789
