@@ -1,3 +1,9 @@
+2005-07-05  Joseph S. Myers  <joseph@codesourcery.com>
+
+	PR c/22308
+	* c-decl.c (finish_struct): Also copy C_TYPE_FIELDS_READONLY,
+	C_TYPE_FIELDS_VOLATILE and C_TYPE_VARIABLE_SIZE to type variants.
+
 2005-06-14  Eric Botcazou  <ebotcazou@libertysurf.fr>
 
 	PR target/20301
